fix: hide scrollbar.

--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,12 @@
 }
 
 body {
-  width: 100vw;
   height: 100vh;
   background: #f5f8fa;
 }
 
 html {
   scroll-behavior: smooth;
-}
-
-section {
-  width: 100vw;
 }
 
 footer {
